@@ -1,5 +1,6 @@
 v1.0.5 October --, 2022
 * Fixed bug in eyedropper feature with 16bits images
+* Added button to see original image in background extraction
 
 v1.0.4 September 02, 2022
 
