@@ -1,6 +1,7 @@
 siril 1.0.5
 10/--/22
 * Fixed bug in eyedropper feature with 16bits images
+* Added button to see original image in background extraction
 
 siril 1.0.4
 09/02/22
